2003-11-08  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/tests/Makefile.am:
	* libop/tests/mangle_tests.c: new tests: sample filename mangling

2003-11-08  Philippe Elie  <phil.el@wanadoo.fr>

	* module/x86/op_syscalls.c: fix build with 2.2 kernel

2003-11-06  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.am: use .PHONY for module goal to not statisfy this goal
	  with the subdir named module
	* m4/findkernel.m4: minor fix.

2003-11-06  John Levon  <levon@movementarian.org>

	* Makefile.am: minor cleanup

2003-11-06  John Levon  <levon@movementarian.org>

	* gui/Makefile.am: remove unused -DKVERSION

2003-11-06  John Levon  <levon@movementarian.org>

	* configure.in: add --disable-werror and --disable-optimization

	* doc/oprofile.xml: document above. Remove docs for
	* --enable-gcov (only useful to developers)

2003-11-06  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_kernel.c:
	* daemon/liblegacy/opd_kernel.c: be less paranoid about kernel range,
	  this is slightly different than the patch Thomas Spatzier tested but
	  it can't hurt (famous last words ...). This fixes s390x where kernel
	  start can be zero and was rejected.

2003-11-06  Thomas Spatzier  <tspat@de.ibm.com>

	* daemon/opd_cookie.c: changed an #if defined for selecting right
	  system call for IBM s390 or s390x, respectively
	  
2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/path_filter.cpp: remove 2 identical FIXME
	* libutil++/tests/file_manip_tests.cpp:
	* libutil++/tests/path_filter_tests.cpp: reflect the behavior by
	  new tests

2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_manage.c:
	* libop/op_events.h: -pedantic fix

2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_sfile.c:
	* daemon/liblegacy/opd_kernel.c:
	* libutil/op_cpufreq.c:
	* libutil/op_file.c: a few s/goto/break/
	* libpp/format_output.cpp: padding never used after initialization

2003-11-04  Philippe Elie  <phil.el@wanadoo.fr>
