@@ -1,3 +1,7 @@
+2003-11-09  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/tests/string_manip_tests.cpp: rtrim/ltrim/trim tests
+
 2003-11-08  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libop/tests/Makefile.am:
